# TAMCMC-C

./: CHANGELOG.md  CMakeLists.txt  README.md  compile_commands.json  cpptamcmc  params.model
.github/workflows/: cmake-multi-platform.yml  cmake.yml  codecov.yml  codeql.yml  msvc.yml
Config/: config_presets.cfg  config_presets.cfg.RGBtests  config_presets.cfg.ajAlm_Legacy  config_presets.cfg.bak  config_presets.cfg.gate  config_presets.cfg.triangle
Config/default/: config_default.cfg  config_default.cfg.Gaussian_fit  config_default.cfg.Kallinger_Gaussian_fit  config_default.cfg.RGB  errors_default.cfg  models_ctrl.list  primepriors_ctrl.list  priors_ctrl.list
Config/templates/model_Harvey_Gaussian/: config_default.cfg  config_presets.cfg
External_Data/Kallinger+2014/: README.md  read_kallinger_data.py  show_kallinger2014.py
External_Data/Kallinger+2014/data/: APOKASC.summary.csv
scripts/: detect_finished_files.py  run_slurm_jobs.py  search_cfg_files.py
scripts/slurm/: job.sh  job_array.sh
tamcmc/headers/: MALA.h  Qlm.h  build_lorentzian.h  config.h  data.h  diagnostics.h  io_ajfit.h  io_asymptotic.h  io_models.h  io_ms_global.h  linfit.h  matrices.h  model_def.h  models.h  noise_models.h  polyfit.h  priors_calc.h  stats_dictionary.h  version.h
tamcmc/sources/: MALA.cpp  acoefs.cpp  build_lorentzian.cpp  config.cpp  config.cpp.bak.before-change-data_in-to-data_all-setup  config_presets.cpp  diagnostics.cpp  function_rot.cpp  interpol.cpp  io_ajfit.cpp  io_asymptotic.cpp  io_asymptotic.cpp.bak  io_local.cpp  io_models.cpp  io_ms_global.cpp  likelihoods.cpp  main.cpp  main.cpp.bak  matrices.cpp  model_def.cpp  models.cpp  noise_models.cpp  outputs_targz.cpp  polyfit.cpp  priors_calc.cpp  priors_calc.cpp.bak  stats_dictionary.cpp
test/acoefs_test/: CMakeLists.txt  Readme.md  acoefs_test.cpp
test/inputs/: 001867706_0100_TF.data  001867706_0100_TF.model  001867706_0100_TF_12052021.model  10280410_Gaussfit.data  10280410_Gaussfit.model  1161491_Gaussfit.data  1161491_Gaussfit.model  kplr003427720_kasoc-psd_slc_v1_1111.model  kplr003427720_kasoc-psd_slc_v1_ajAlm_gate.model  kplr003427720_kasoc-psd_slc_v1_ajAlm_gate_0.priors  kplr003427720_kasoc-psd_slc_v1_ajAlm_gate_1.priors  kplr008379927_kasoc-psd_slc_v2_1100.model  kplr008379927_kasoc-psd_slc_v2_1100_1.model  kplr008379927_kasoc-psd_slc_v2_aj_fast.model
test/inputs/RGB/: 005696036_fast_v4_div1000.data  005696036_fast_v4_div1000.model
test/inputs/RGB/v1.86.0/: 10722175.data  10722175.model  10722175_nobias.model  README.txt
test/inputs/Sun/: 19992002_a1incforced.model  19992002_incfix.model  19992002_incfix_ajlin.model  20062009_incfix.model  20062009_incfix_ajlin.model  20062009_incfree.model  Readme.txt
test/inputs/Sun/fast/: 19992002_a1incforced_fast.model  19992002_incfix_fast.model  19992002_incfix_fast_Priorevalrange.model  19992002_incfix_fast_Priorevalrange_Alm.model  19992002_incfix_fast_Priorevalrange_a2a4a6.model  19992002_incfix_fast_Priorevalrange_incfree.model  19992002_incfix_fast_a2a4a6.model  20062009_a1incforced_fast.model  20062009_incfix_fast.model  20062009_incfix_fast_a2a4a6.model
test/inputs/ajfit/: aj_ARonly_Sun_19992002_l12only.data  aj_ARonly_Sun_19992002_l12only.model
test/lorentzian_test/: CMakeLists.txt  Readme.md  function_rot.py  lorentzian_test  lorentzian_test.cpp  main.py  show_aj_l12.py
test/lorentzian_test/unit_tests/: CMakeLists.txt  Readme.md  test_build_l_mode.cpp
test/lorentzian_test/unit_tests/config_ARMM/: make_star_test.cfg
test/lorentzian_test/unit_tests/ref_code/: build_lorentzian_ref.cpp  build_lorentzian_ref.h  models_ref.cpp  models_ref.h  models_ref_parallel_RGBonly.cpp  models_ref_parallel_RGBonly.h
test/outputs/kplr008379927_kasoc-psd_slc_v2_1100/diags/: kplr008379927_kasoc-psd_slc_v2_1100_B_model_init.eps
tmp/: graph_tmp_56471.txt  graph_tmp_56689.txt  graph_tmp_59649.txt  graph_tmp_59664.txt  graph_tmp_62518.txt  hist_tmp_56471.txt  hist_tmp_56601.txt  hist_tmp_56624.txt  hist_tmp_56629.txt  hist_tmp_56689.txt  hist_tmp_59664.txt
tools/: README.md  a2_nl.py  aj_nl.py  bin2txt_params.cpp  do_npz2sav.py  getevidence.cpp  getmodel.cpp  getstats.cpp  init_fit.py  models_ctrl.list  print_s2noise.py  quick_samples_stats.cpp  quick_samples_stats.h  quickshow.py  range_aj_specfit.py  read_stats.cpp  rescale_height.py  sav2data.py
tools/Gaussfit_tools/: ascii2sav_py.pro  envelope_measure.pro  envelope_measure.py  guess_gaussian_from_noisefit.py  init_fit.py  instructions_envelope.md  npz2sav_converter.py  npz2sav_script.pro  npzLC2sav_script.pro
tools/Misc/: print_s2noise.py  quickshow.py  read_outputs_tamcmc.py
tools/bootstrap/: CMakeLists.txt  bootstrap_algos.cpp  bootstrap_algos.h  bootstrap_algos_unit_test.cpp
tools/convert_fit2prior_table/: Readme.md  do_many_processes.py  make_priors_tables.py  unittest_priors_tables.py
tools/data_extract_IDL/: Echelle_diagram.pro  Gaussian_fitplot.pro  Local_fitplot.pro  MS_Global_fitplot.pro  PostMCMC_showbestfit.pro  histograms_bin2txt_params.pro  models_ctrl.list  read_getmodel_file.pro  script_showbestfit.pro
